# p1-jobtrack-core

./: .dockerignore  .env  .gitignore  DESIGN.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260525_2306_aa0703203d70_create_users_table.py  20260526_0003_36ea141c203e_create_jobs_table.py
app/: config.py  dependencies.py  main.py  metrics.py
app/auth/: jwt.py  rbac.py  routes.py
app/db/: session.py
app/models/: base.py  job.py  user.py
app/routers/: jobs.py
app/schemas/: job.py  user.py
app/services/: job.py  user.py
docs/: architecture.drawio
tests/: conftest.py  test_auth.py  test_jobs.py
